--- a/app/src/main/res/layout/card_cell.xml
+++ b/app/src/main/res/layout/card_cell.xml
@@ -10,12 +10,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="15dp"
-        android:layout_margin="10dp"
-        app:cardElevation="7dp">
-        <LinearLayout
+        android:layout_margin="10dp">
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
             <ImageView
                 android:id="@+id/cover"
@@ -23,8 +21,10 @@
                 android:layout_height="wrap_content"
                 android:src="@drawable/wyam"
                 android:adjustViewBounds="true"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
                 android:contentDescription="@string/cover"/>
-
             <TextView
                 android:id="@+id/title"
                 android:layout_width="match_parent"
@@ -32,6 +32,9 @@
                 android:gravity="center"
                 android:text="@string/title_place_holder"
                 android:textColor="@color/black"
+                app:layout_constraintStart_toStartOf="@+id/cover"
+                app:layout_constraintEnd_toEndOf="@+id/cover"
+                app:layout_constraintTop_toBottomOf="@+id/cover"
                 android:textSize="15sp"
                 android:lines="2"
                 android:textStyle="bold"/>
@@ -43,10 +46,25 @@
                 android:gravity="center"
                 android:text="@string/author_placeholder"
                 android:textColor="@color/darkGray"
+                app:layout_constraintStart_toStartOf="@+id/title"
+                app:layout_constraintEnd_toEndOf="@+id/title"
+                app:layout_constraintTop_toBottomOf="@+id/title"
                 android:textSize="12sp"
                 android:lines="1" />
 
-        </LinearLayout>
+
+            <ProgressBar
+                android:id="@+id/progressBar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toBottomOf="@+id/author"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.cardview.widget.CardView>
 
