--- a/app/src/main/res/layout/fragment_detait.xml
+++ b/app/src/main/res/layout/fragment_detait.xml
@@ -1,54 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:elevation="10dp"
     android:background="@color/white"
+    android:elevation="10dp"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".DetailActivity"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/cover"
-        android:layout_marginTop="10dp"
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:src="@drawable/wyam"
         android:adjustViewBounds="true"
-        android:contentDescription="@string/cover"/>
+        android:contentDescription="@string/cover"
+        android:src="@drawable/wyam"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/title"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:lines="2"
         android:text="@string/title_place_holder"
         android:textColor="@color/black"
         android:textSize="20sp"
-        android:lines="2"
-        android:textStyle="bold"/>
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/cover" />
 
     <TextView
         android:id="@+id/author"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:lines="1"
         android:text="@string/author_placeholder"
         android:textColor="@color/darkGray"
         android:textSize="18sp"
-        android:lines="1" />
+        app:layout_constraintTop_toBottomOf="@+id/title" />
 
     <TextView
         android:id="@+id/description"
-        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:text="@string/author_placeholder"
         android:textColor="@color/black"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@+id/author" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
